# Rotom-Bot

./: .breakpoints  .gitignore  README.md  all.json  gen6.json  gen7.json  guild.json  hall_of_fame.json  help.py  help_aliases.json  help_data.json  illegal6.txt  illegal7.txt  keep_alive.py  league.py  league_prof6.json  league_prof7.json  main.py  manage.json  mod.json  mons6.txt  mons7.txt  prefixes.json  pyproject.toml  requirements.txt  swear_words.txt  tour.json  trivia.json  villian.py
PyDictionary/: core.py
bprofanity/: profanity_wordlist.txt
cogs/: badge.py  battler.py  chatbot.py  dm.py  first.py  fun.py  game.py  help.py  league.py  loc.py  logger.py  misc.py  misc_cmds.py  mod.py  mod_cmds.py  music.py  owner.py  pokedex.py  pokedex2.py  psd.py  setup.py  smashpass.py  tictactoe.py  tour.py  trans.py  try.py
data/: abilities.json  aliases.json  data.json  formats-data.json  items.json  moves.json  natures.json  pokedex.json  typechart.json
jsons/: gen7.json  hall_of_fame.json  hof.json  league_prof6.json  league_prof7.json  mod.json
snipe/: esnipe.json  snipe.json
templates/: index.html
tourdata/: characters.json  charactertour.json
translator/: __init__.py  gauthtoken.py  models.py  translate.py  urls.py  utils.py
