[tool.poetry]
name = "repl_python3_beta_Rotom-Bot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^3.0.1"
discord = "^1.7.3"
httpx = "^0.18.2"
bs4 = "^0.0.1"
docx = "^0.2.4"
Flask = "^2.0.1"
httpcore = "^0.13.6"
youtube_dl = "^2021.6.6"
PyDictionary = "^2.0.1"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
