[tool.poetry]
name = "repl_python3_beta_Rotom-Bot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.1.0"
bs4 = "^0.0.1"
async-timeout = "^3.0.1"
Flask = "^2.0.1"
"trivia.py" = "^1.0.8"
google = "^3.0.0"
Unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
